; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/netdevsim/extr_bpf.c_nsim_bpf_map_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/netdevsim/extr_bpf.c_nsim_bpf_map_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bpf_offloaded_map = type { %struct.nsim_bpf_bound_map* }
%struct.nsim_bpf_bound_map = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.nsim_bpf_bound_map*, %struct.nsim_bpf_bound_map* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bpf_offloaded_map*)* @nsim_bpf_map_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nsim_bpf_map_free(%struct.bpf_offloaded_map* %0) #0 {
  %2 = alloca %struct.bpf_offloaded_map*, align 8
  %3 = alloca %struct.nsim_bpf_bound_map*, align 8
  %4 = alloca i32, align 4
  store %struct.bpf_offloaded_map* %0, %struct.bpf_offloaded_map** %2, align 8
  %5 = load %struct.bpf_offloaded_map*, %struct.bpf_offloaded_map** %2, align 8
  %6 = getelementptr inbounds %struct.bpf_offloaded_map, %struct.bpf_offloaded_map* %5, i32 0, i32 0
  %7 = load %struct.nsim_bpf_bound_map*, %struct.nsim_bpf_bound_map** %6, align 8
  store %struct.nsim_bpf_bound_map* %7, %struct.nsim_bpf_bound_map** %3, align 8
  store i32 0, i32* %4, align 4
  br label %8

8:                                                ; preds = %34, %1
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.nsim_bpf_bound_map*, %struct.nsim_bpf_bound_map** %3, align 8
  %11 = getelementptr inbounds %struct.nsim_bpf_bound_map, %struct.nsim_bpf_bound_map* %10, i32 0, i32 2
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = call i32 @ARRAY_SIZE(%struct.TYPE_2__* %12)
  %14 = icmp ult i32 %9, %13
  br i1 %14, label %15, label %37

15:                                               ; preds = %8
  %16 = load %struct.nsim_bpf_bound_map*, %struct.nsim_bpf_bound_map** %3, align 8
  %17 = getelementptr inbounds %struct.nsim_bpf_bound_map, %struct.nsim_bpf_bound_map* %16, i32 0, i32 2
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = load i32, i32* %4, align 4
  %20 = zext i32 %19 to i64
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i64 %20
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 1
  %23 = load %struct.nsim_bpf_bound_map*, %struct.nsim_bpf_bound_map** %22, align 8
  %24 = call i32 @kfree(%struct.nsim_bpf_bound_map* %23)
  %25 = load %struct.nsim_bpf_bound_map*, %struct.nsim_bpf_bound_map** %3, align 8
  %26 = getelementptr inbounds %struct.nsim_bpf_bound_map, %struct.nsim_bpf_bound_map* %25, i32 0, i32 2
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = load i32, i32* %4, align 4
  %29 = zext i32 %28 to i64
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i64 %29
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load %struct.nsim_bpf_bound_map*, %struct.nsim_bpf_bound_map** %31, align 8
  %33 = call i32 @kfree(%struct.nsim_bpf_bound_map* %32)
  br label %34

34:                                               ; preds = %15
  %35 = load i32, i32* %4, align 4
  %36 = add i32 %35, 1
  store i32 %36, i32* %4, align 4
  br label %8

37:                                               ; preds = %8
  %38 = load %struct.nsim_bpf_bound_map*, %struct.nsim_bpf_bound_map** %3, align 8
  %39 = getelementptr inbounds %struct.nsim_bpf_bound_map, %struct.nsim_bpf_bound_map* %38, i32 0, i32 1
  %40 = call i32 @list_del_init(i32* %39)
  %41 = load %struct.nsim_bpf_bound_map*, %struct.nsim_bpf_bound_map** %3, align 8
  %42 = getelementptr inbounds %struct.nsim_bpf_bound_map, %struct.nsim_bpf_bound_map* %41, i32 0, i32 0
  %43 = call i32 @mutex_destroy(i32* %42)
  %44 = load %struct.nsim_bpf_bound_map*, %struct.nsim_bpf_bound_map** %3, align 8
  %45 = call i32 @kfree(%struct.nsim_bpf_bound_map* %44)
  ret void
}

declare dso_local i32 @ARRAY_SIZE(%struct.TYPE_2__*) #1

declare dso_local i32 @kfree(%struct.nsim_bpf_bound_map*) #1

declare dso_local i32 @list_del_init(i32*) #1

declare dso_local i32 @mutex_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
